--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Head -->
 <head>
 
-<title>Repura Central a Gaming Category Bootstrap Responsive Website Template | Home :: REPURA</title>
+<title>Epica Hub is a gaming Category Bootstrap Responsive Website Template | Home :: EPICA HUB</title>
 
 <!-- Meta-Tags -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,7 +61,7 @@
 					</button>
 					<!-- Logo -->
 					<div class="logo">
-						<a class="navbar-brand logo-w3l button" href="index.html">REPURA CENTRAL GAMES</a>
+						<a class="navbar-brand logo-w3l button" href="index.html">EPICA HUB GAMING</a>
 					</div>
 					<!-- //Logo -->
 				</div>
@@ -148,7 +148,7 @@
 			<div class="w3lsaboutaits-grids">
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-1">
 					<h3>Best Blockchain Games</h3>
-					<p>Welcome to Repura Central Games – Your Gateway to the Revolution of Play-to-Earn!
+					<p>Welcome to REPICA HUB GAMING – Your Gateway to the Revolution of Play-to-Earn!
                        Dive into the future of gaming where your skills and playtime don't just earn you bragging rights, but real rewards. We're living in an exciting era where blockchain technology is transforming the gaming landscape, empowering players like never before. Forget just playing games; now you can truly own your in-game assets as Non-Fungible Tokens (NFTs) and earn valuable cryptocurrencies for your achievements and dedication.</p>
 				</div>
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-2">
